Add shadcn-vue for resolution picker and error display (#2, #8)

--- a/WebUI/package.json
+++ b/WebUI/package.json
@@ -11,14 +11,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.19",
+    "@radix-icons/vue": "^1.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "get-port": "^7.1.0",
     "highlight.js": "^11.9.0",
     "koffi": "^2.8.8",
     "marked": "^12.0.2",
     "marked-highlight": "^2.1.1",
     "pinia": "^2.1.7",
+    "radix-vue": "^1.9.4",
     "sudo-prompt": "^9.2.1",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "unplugin-auto-import": "^0.17.5",
     "vue": "^3.4.21"
   },
@@ -27,12 +32,13 @@
     "@types/node": "^20.8.10",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/devtools": "^7.3.6",
+    "autoprefixer": "^10.4.20",
     "electron": "^31.2.1",
     "electron-builder": "^24.13.3",
     "electron-builder-squirrel-windows": "^24.13.3",
     "postcss": "^8.4.31",
     "postcss-import": "^15.1.0",
-    "tailwindcss": "^3.3.5",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-plugin-electron": "^0.28.7",
