--- a/WebUI/package.json
+++ b/WebUI/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.1",
   "scripts": {
-    "dev": "VITE_PLATFORM_TITLE='for Local® Dev™ Mode' vite",
+    "dev": "cross-env VITE_PLATFORM_TITLE=\"for Local® Dev™ Mode\" vite",
     "build": "vue-tsc && vite build && call build\\before_build.bat&& electron-builder --config build\\ultra-build.json&&call build\\after_build.bat",
     "build:ultra": "call build\\ultra_before_build.bat&&vue-tsc && vite build && electron-builder --config build\\ultra-build.json&&call build\\after_build.bat",
     "dir:ultra": "call build\\ultra_before_build.bat&&vue-tsc && vite build && electron-builder --dir --config build\\ultra-build.json&&call build\\after_build.bat",
@@ -14,6 +14,7 @@
     "@radix-icons/vue": "^1.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cross-env": "^7.0.3",
     "get-port": "^7.1.0",
     "highlight.js": "^11.9.0",
     "koffi": "^2.8.8",
@@ -40,7 +41,7 @@
     "postcss-import": "^15.1.0",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0",
+    "vite": "^5.4.2",
     "vite-plugin-electron": "^0.28.7",
     "vite-plugin-electron-renderer": "^0.14.5",
     "vue-tsc": "^2.0.6"
