--- a/WebUI/package.json
+++ b/WebUI/package.json
@@ -21,6 +21,7 @@
     "marked": "^12.0.2",
     "marked-highlight": "^2.1.1",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^4.0.0",
     "radix-vue": "^1.9.4",
     "sudo-prompt": "^9.2.1",
     "tailwind-merge": "^2.5.2",
