--- a/service/requirements-ultra.txt
+++ b/service/requirements-ultra.txt
@@ -5,6 +5,9 @@ diffusers==0.27.2
 Flask==3.0.3
 huggingface_hub==0.22.2
 ipex_llm==2.1.0
+bigdl-core-xe-21==2.5.0
+bigdl-core-xe-addons-21==2.5.0
+bigdl-core-xe-batch-21==2.5.0
 langchain_community==0.2.9
 numpy==1.26.4
 opencv_python==4.9.0.80
