--- a/service/requirements-arc.txt
+++ b/service/requirements-arc.txt
@@ -24,9 +24,10 @@ pypdf==4.2.0
 unstructured==0.14.6
 setuptools==69.5.1
 
+
 --extra-index-url https://pytorch-extension.intel.com/release-whl/stable/xpu/us/
-torch==2.1.0.post3
-torchvision==0.16.0.post3
-torchaudio==2.1.0.post3
-intel-extension-for-pytorch==2.1.40+xpu
+torch==2.3.1+cxx11.abi
+torchvision==0.18.1+cxx11.abi
+torchaudio==2.3.1+cxx11.abi
+intel-extension-for-pytorch==2.3.110+xpu
 mkl-dpcpp==2024.2.1
