update requirements.txt, realesrgan patch, dropdown list for language selection, theme changes (#66)
Signed-off-by: 3ae3ae <ogyshjsm@naver.com>
Co-authored-by: Guo, Yilong <yilong.guo@intel.com>
Co-authored-by: Markus Schüttler <94831444+mschuettlerTNG@users.noreply.github.com>
Co-authored-by: 3ae3ae <83870598+3ae3ae@users.noreply.github.com>
Co-authored-by: DanielHirschTNG <166369190+DanielHirschTNG@users.noreply.github.com>
Co-authored-by: Nicolas Oliver <dario.n.oliver@intel.com>

--- a/service/requirements-arc.txt
+++ b/service/requirements-arc.txt
@@ -1,15 +1,14 @@
-
-
 basicsr==1.4.2
 compel==2.0.2
 datasets==2.18.0
 diffusers==0.27.2
 Flask==3.0.3
 huggingface_hub==0.22.2
-ipex_llm==2.1.0b20240705
-langchain==0.2.2
+ipex_llm==2.1.0
+bigdl-core-xe-21==2.5.0
+bigdl-core-xe-addons-21==2.5.0
+bigdl-core-xe-batch-21==2.5.0
 langchain_community==0.2.9
-langchain_core==0.2.4
 numpy==1.26.4
 opencv_python==4.9.0.80
 peft==0.10.0
@@ -19,11 +18,16 @@ Requests==2.32.3
 sentence_transformers==2.3.1
 transformers==4.39.0
 trl==0.9.3
-bigdl-core-xe-21==2.5.0b20240705
-bigdl-core-xe-addons-21==2.5.0b20240705
-bigdl-core-xe-batch-21==2.5.0b20240705
 faiss-cpu==1.8.0
 docx2txt==0.8
 pypdf==4.2.0
 unstructured==0.14.6
 setuptools==69.5.1
+
+
+--extra-index-url https://pytorch-extension.intel.com/release-whl/stable/xpu/us/
+torch==2.3.1+cxx11.abi
+torchvision==0.18.1+cxx11.abi
+torchaudio==2.3.1+cxx11.abi
+intel-extension-for-pytorch==2.3.110+xpu
+mkl-dpcpp==2024.2.1
