--- a/WebUI/package.json
+++ b/WebUI/package.json
@@ -12,41 +12,44 @@
   },
   "dependencies": {
     "@radix-icons/vue": "^1.0.0",
-    "@vueuse/core": "^11.0.3",
+    "@vueuse/core": "^11.1.0",
+    "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "get-port": "^7.1.0",
-    "highlight.js": "^11.9.0",
-    "koffi": "^2.8.8",
-    "marked": "^12.0.2",
-    "marked-highlight": "^2.1.1",
-    "pinia": "^2.1.7",
-    "pinia-plugin-persistedstate": "^4.0.0",
-    "radix-vue": "^1.9.4",
+    "highlight.js": "^11.10.0",
+    "koffi": "^2.9.1",
+    "marked": "^14.1.3",
+    "marked-highlight": "^2.1.4",
+    "pinia": "^2.2.4",
+    "pinia-plugin-persistedstate": "^4.1.1",
+    "radix-vue": "^1.9.7",
     "sudo-prompt": "^9.2.1",
-    "tailwind-merge": "^2.5.2",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "unplugin-auto-import": "^0.17.5",
-    "vue": "^3.4.21"
+    "unplugin-auto-import": "^0.18.3",
+    "vue": "^3.5.12"
   },
   "devDependencies": {
     "@types/exif": "^0.6.5",
-    "@types/node": "^20.8.10",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vue/devtools": "^7.3.6",
-    "autoprefixer": "^10.4.20",
-    "electron": "^31.2.1",
-    "electron-builder": "^24.13.3",
-    "electron-builder-squirrel-windows": "^24.13.3",
-    "postcss": "^8.4.31",
-    "postcss-import": "^15.1.0",
-    "tailwindcss": "^3.4.10",
-    "typescript": "^5.2.2",
-    "vite": "^5.4.2",
-    "vite-plugin-electron": "^0.28.7",
-    "vite-plugin-electron-renderer": "^0.14.5",
-    "vue-tsc": "^2.0.6"
+    "@types/node": "^20.16.11",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "@vue/devtools": "^7.4.6",
+    "electron": "^33.0.0",
+    "electron-builder": "^25.1.8",
+    "electron-builder-squirrel-windows": "^25.1.8",
+    "postcss": "^8.4.47",
+    "postcss-import": "^16.1.0",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.9",
+    "vite-plugin-electron": "^0.28.8",
+    "vite-plugin-electron-renderer": "^0.14.6",
+    "vue-tsc": "^2.1.6"
+  },
+  "overrides": {
+    "ip": "https://registry.npmjs.org/neoip/-/neoip-2.1.0.tgz"
   },
   "debug": {
     "env": {
