--- a/service/model_config.json
+++ b/service/model_config.json
@@ -1,5 +1,6 @@
 {
   "llm": "./models/llm/checkpoints",
+  "ggufLLM": "./models/llm/gguf",
   "stableDiffusion": "./models/stable_diffusion/checkpoints",
   "lora": "./models/stable_diffusion/lora",
   "vae": "./models/stable_diffusion/vae",
