--- a/service/requirements-arc.txt
+++ b/service/requirements-arc.txt
@@ -3,14 +3,16 @@
 # IPEX
 --extra-index-url https://pytorch-extension.intel.com/release-whl/stable/xpu/us/
 --extra-index-url https://pytorch-extension.intel.com/release-whl/stable/xpu/cn/
-torch==2.1.0.post3
-torchvision==0.16.0.post3
-torchaudio==2.1.0.post3
-intel-extension-for-pytorch==2.1.40+xpu
+torch==2.3.1.post0+cxx11.abi
+torchvision==0.18.1.post0+cxx11.abi
+torchaudio==2.3.1.post0+cxx11.abi
+intel-extension-for-pytorch==2.3.110.post0+xpu
 mkl-dpcpp==2024.2.1
 
 # IPEX-LLM
-ipex_llm==2.1.0
-bigdl-core-xe-21==2.5.0
-bigdl-core-xe-addons-21==2.5.0
-bigdl-core-xe-batch-21==2.5.0
+--pre
+ipex_llm==2.2.0b2
+bigdl-core-xe-23==2.6.0b2
+bigdl-core-xe-addons-23==2.6.0b2
+bigdl-core-xe-batch-23==2.6.0b2
+onednn-devel==2024.1.1
