--- a/service/requirements-ultra.txt
+++ b/service/requirements-ultra.txt
@@ -15,3 +15,4 @@ ipex_llm==2.2.0b2
 bigdl-core-xe-23==2.6.0b2
 bigdl-core-xe-addons-23==2.6.0b2
 bigdl-core-xe-batch-23==2.6.0b2
+onednn-devel==2024.1.1
