--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 .vscode/
 env/
 package_res/
-WebUI/external/7zr.exe
-WebUI/external/service/
-WebUI/external/env.7z
-WebUI/external/arc-ipex-wheels/
 release/
+WebUI/external/service/
+
+installer.nsh
+*.exe
+*.7z
+*.whl
