--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -47,6 +47,8 @@ jobs:
           output: 'dependency-results.sbom.json'
           image-ref: '.'
           github-pat: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          TRIVY_DB_REPOSITORY: public.ecr.aws/aquasecurity/trivy-db,aquasec/trivy-db,ghcr.io/aquasecurity/trivy-db
       
       - name: Upload trivy dependency map
         uses: actions/upload-artifact@v4
