--- a/service/requirements-acm.txt
+++ b/service/requirements-acm.txt
@@ -1,12 +1,11 @@
 # IPEX
---extra-index-url https://pytorch-extension.intel.com/release-whl/stable/mtl/cn/
---extra-index-url https://pytorch-extension.intel.com/release-whl/stable/mtl/us/
-
+--extra-index-url https://pytorch-extension.intel.com/release-whl/stable/xpu/cn/
+--extra-index-url https://pytorch-extension.intel.com/release-whl/stable/xpu/us/
+mkl-dpcpp==2024.2.1
 torch==2.3.1.post0+cxx11.abi
 torchvision==0.18.1.post0+cxx11.abi
 torchaudio==2.3.1.post0+cxx11.abi
-# intel-extension-for-pytorch==2.3.110.post0+xpu # is installed by service.setUp()
-mkl-dpcpp==2024.2.1
+intel-extension-for-pytorch==2.3.110.post0+xpu
 
 # IPEX-LLM
 ipex_llm==2.2.0b2
