--- a/service/requirements-bmg.txt
+++ b/service/requirements-bmg.txt
@@ -5,7 +5,7 @@ mkl-dpcpp==2024.2.1
 torch==2.3.1.post0+cxx11.abi
 torchvision==0.18.1.post0+cxx11.abi
 torchaudio==2.3.1.post0+cxx11.abi
-# intel-extension-for-pytorch==2.3.110.post0+xpu # is installed by service.setUp()
+../../intel_extension_for_pytorch-2.3.110+bmg-cp311-cp311-win_amd64.whl # must be packaged
 
 # IPEX-LLM
 ipex_llm==2.2.0b2
