--- a/service/requirements-mtl.txt
+++ b/service/requirements-mtl.txt
@@ -1,11 +1,11 @@
 # IPEX
---extra-index-url https://pytorch-extension.intel.com/release-whl/stable/lnl/cn/
---extra-index-url https://pytorch-extension.intel.com/release-whl/stable/lnl/us/
+--extra-index-url https://pytorch-extension.intel.com/release-whl/stable/mtl/cn/
+--extra-index-url https://pytorch-extension.intel.com/release-whl/stable/mtl/us/
 
 torch==2.3.1.post0+cxx11.abi
 torchvision==0.18.1.post0+cxx11.abi
 torchaudio==2.3.1.post0+cxx11.abi
-# intel-extension-for-pytorch==2.3.110.post0+xpu # is installed by service.setUp()
+intel-extension-for-pytorch==2.3.110.post0+xpu
 mkl-dpcpp==2024.2.1
 
 # IPEX-LLM
