--- a/WebUI/external/model_config.json
+++ b/WebUI/external/model_config.json
@@ -1,5 +1,6 @@
 {
   "llm": "./resources/service/models/llm/checkpoints",
+  "ggufLLM": "./resources/service/models/llm/ggufLLM",
   "embedding": "./resources/service/models/llm/embedding",
   "stableDiffusion": "./resources/service/models/stable_diffusion/checkpoints",
   "inpaint": "./resources/service/models/stable_diffusion/inpaint",
