--- a/service/requirements-bmg.txt
+++ b/service/requirements-bmg.txt
@@ -8,10 +8,10 @@ torchaudio==2.3.1.post0+cxx11.abi
 # ../intel_extension_for_pytorch-2.3.110+bmg-cp311-cp311-win_amd64.whl # must be packaged
 
 # IPEX-LLM
-ipex_llm==2.2.0b2
-bigdl-core-xe-23==2.6.0b2
-bigdl-core-xe-addons-23==2.6.0b2
-bigdl-core-xe-batch-23==2.6.0b2
+ipex_llm==2.2.0b20241225
+bigdl-core-xe-23==2.6.0b20241225
+bigdl-core-xe-addons-23==2.6.0b20241225
+bigdl-core-xe-batch-23==2.6.0b20241225
 onednn-devel==2024.1.1
 
 # Intel dependencies depend on numpy 1
