--- a/service/requirements-mtl.txt
+++ b/service/requirements-mtl.txt
@@ -9,10 +9,10 @@ intel-extension-for-pytorch==2.3.110.post0+xpu
 mkl-dpcpp==2024.2.1
 
 # IPEX-LLM
-ipex_llm==2.2.0b2
-bigdl-core-xe-23==2.6.0b2
-bigdl-core-xe-addons-23==2.6.0b2
-bigdl-core-xe-batch-23==2.6.0b2
+ipex_llm==2.2.0b20241225
+bigdl-core-xe-23==2.6.0b20241225
+bigdl-core-xe-addons-23==2.6.0b20241225
+bigdl-core-xe-batch-23==2.6.0b20241225
 onednn-devel==2024.1.1
 
 # Intel dependencies depend on numpy 1
