--- a/WebUI/tsconfig.json
+++ b/WebUI/tsconfig.json
@@ -20,7 +20,7 @@
     "strict": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noFallthroughCasesInSwitch": true,
+    "noFallthroughCasesInSwitch": false,
     "paths": {
       "@": [
         "./src"
