--- a/WebUI/package.json
+++ b/WebUI/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@types/exif": "^0.6.5",
+    "@types/minimist": "^1.2.5",
     "@types/node": "^20.17.10",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/devtools": "^7.6.8",
