Add OpenVINO model support and related configurations

--- a/service/model_config.json
+++ b/service/model_config.json
@@ -1,6 +1,7 @@
 {
   "llm": "./models/llm/checkpoints",
   "ggufLLM": "./models/llm/gguf",
+  "openvino": "./models/llm/openvino",
   "stableDiffusion": "./models/stable_diffusion/checkpoints",
   "lora": "./models/stable_diffusion/lora",
   "vae": "./models/stable_diffusion/vae",
