--- a/WebUI/package.json
+++ b/WebUI/package.json
@@ -39,6 +39,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "unplugin-auto-import": "^0.18.6",
+    "uuid": "^11.0.5",
     "vue": "^3.5.12",
     "zod": "^3.24.1"
   },
