--- a/OpenVINO/requirements.txt
+++ b/OpenVINO/requirements.txt
@@ -1,4 +1,5 @@
+--extra-index-url https://storage.openvinotoolkit.org/simple/wheels/nightly
 Flask==3.0.3
 apiflask==2.3.0
 optimum-intel[openvino]
-openvino-genai
+openvino-genai==2025.1.0.0.dev20250203
