--- a/WebUI/package.json
+++ b/WebUI/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
+    "express": "^4.21.2",
     "extract-zip": "^2.0.1",
     "get-port": "^7.1.0",
     "highlight.js": "^11.11.0",
