--- a/OpenVINO/requirements.txt
+++ b/OpenVINO/requirements.txt
@@ -1,5 +1,5 @@
---extra-index-url https://storage.openvinotoolkit.org/simple/wheels/nightly
+# --extra-index-url https://storage.openvinotoolkit.org/simple/wheels/nightly --index-strategy unsafe-best-match
 Flask==3.0.3
 apiflask==2.3.0
 optimum-intel[openvino]
-openvino-genai==2025.1.0.0.dev20250203
+# openvino-genai==2025.1.0.0.dev20250203
