--- a/WebUI/package.json
+++ b/WebUI/package.json
@@ -18,6 +18,9 @@
     "format:ci": "prettier --check ."
   },
   "dependencies": {
+    "@langchain/community": "^0.3.34",
+    "@langchain/core": "^0.3.42",
+    "@langchain/openai": "^0.4.4",
     "@radix-icons/vue": "^1.0.0",
     "@vueuse/core": "^11.3.0",
     "autoprefixer": "^10.4.20",
@@ -29,10 +32,13 @@
     "get-port": "^7.1.0",
     "highlight.js": "^11.11.0",
     "koffi": "^2.9.2",
+    "langchain": "^0.3.19",
+    "mammoth": "^1.9.0",
     "marked": "^14.1.4",
     "marked-highlight": "^2.2.1",
     "node-fetch": "^3.3.2",
     "partysocket": "^1.0.3",
+    "pdf-parse": "^1.1.1",
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^4.1.3",
     "radix-vue": "^1.9.11",
@@ -42,6 +48,7 @@
     "unplugin-auto-import": "^0.18.6",
     "uuid": "^11.0.5",
     "vue": "^3.5.12",
+    "word-extractor": "^1.0.4",
     "zod": "^3.24.1"
   },
   "devDependencies": {
