--- a/service/model_config.json
+++ b/service/model_config.json
@@ -6,5 +6,6 @@
   "lora": "./models/stable_diffusion/lora",
   "vae": "./models/stable_diffusion/vae",
   "sampler": "./models/stable_diffusion/sampler",
-  "ESRGAN":"./models/ESRGAN/RealESRGAN/RealESRGAN_x2plus.pth"
+  "ESRGAN":"./models/ESRGAN/RealESRGAN/RealESRGAN_x2plus.pth",
+  "ipexLLMEmbedding": "./models/embedding/ipexLLM"
 }
