--- a/WebUI/package.json
+++ b/WebUI/package.json
@@ -42,6 +42,7 @@
     "unplugin-auto-import": "^0.18.6",
     "uuid": "^11.0.5",
     "vue": "^3.5.12",
+    "vue-chartjs": "^5.3.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
