--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ package_res/
 build_resources/
 build_envs/
 release/
+WebUI/external/device-service/
 WebUI/external/service/
 WebUI/external/workflows_intel/
 WebUI/external/workflows_bak/
