--- a/WebUI/package.json
+++ b/WebUI/package.json
@@ -11,6 +11,8 @@
     "provide-electron-build-resources": "cross-env node build/scripts/provide-electron-build-resources.js --build_resources_dir=../build_resources --backend_dir=../service --llamacpp_dir=../LlamaCPP --openvino_dir=../OpenVINO --device_service_dir=../device-service --target_dir=./external",
     "prepare-build": "cross-env npm run prepare-python-env && npm run provide-electron-build-resources -- --python_env_dir=../build-envs/online/prototype-python-env",
     "build": "node ./build/scripts/patch-nsis-template.js && cross-env-shell VITE_PLATFORM_TITLE=\"for Intel® Arc™\" \"vue-tsc && vite build && electron-builder --config build/build-config.json --win --x64\"",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "lint:eslint": "eslint . --fix",
     "lint": "eslint . --fix",
     "format": "prettier --write .",
@@ -68,6 +70,7 @@
     "vite": "^5.4.14",
     "vite-plugin-electron": "^0.28.8",
     "vite-plugin-electron-renderer": "^0.14.6",
+    "vitest": "^3.0.9",
     "vue-tsc": "^2.1.10"
   },
   "overrides": {
