--- a/WebUI/package.json
+++ b/WebUI/package.json
@@ -3,12 +3,12 @@
   "private": true,
   "version": "2.2.0-beta",
   "scripts": {
-    "dev": "cross-env VITE_PLATFORM_TITLE=\"for Local® Dev™ Mode\" vite",
+    "dev": "cross-env VITE_DEBUG_TOOLS=\"true\" VITE_PLATFORM_TITLE=\"for Local® Dev™ Mode\" vite",
     "preview": "vite preview",
     "fetch-build-resources": "cross-env node ./build/scripts/fetch-python-package-resources.js --target_dir=../build_resources",
     "prepare-python-env": "cross-env node ./build/scripts/prepare-python-env.js --build_resources_dir=../build_resources --target_dir=../build-envs/online/prototype-python-env",
     "install-full-python-env": "cross-env node ./build/scripts/install-full-python-env.js --env_dir=../build-envs/online/prototype-python-env --comfy_ui_dir=../build_resources/ComfyUI",
-    "provide-electron-build-resources": "cross-env node build/scripts/provide-electron-build-resources.js --build_resources_dir=../build_resources --backend_dir=../service --llamacpp_dir=../LlamaCPP --openvino_dir=../OpenVINO --target_dir=./external",
+    "provide-electron-build-resources": "cross-env node build/scripts/provide-electron-build-resources.js --build_resources_dir=../build_resources --backend_dir=../service --llamacpp_dir=../LlamaCPP --openvino_dir=../OpenVINO --shared_dir=../backend-shared --target_dir=./external",
     "prepare-build": "cross-env npm run prepare-python-env && npm run provide-electron-build-resources -- --python_env_dir=../build-envs/online/prototype-python-env",
     "build": "node ./build/scripts/patch-nsis-template.js && cross-env-shell VITE_PLATFORM_TITLE=\"for Intel® Arc™\" \"vue-tsc && vite build && electron-builder --config build/build-config.json --win --x64\"",
     "lint:eslint": "eslint . --fix",
@@ -18,6 +18,7 @@
     "format:ci": "prettier --check ."
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
     "@langchain/community": "^0.3.34",
     "@langchain/core": "^0.3.42",
     "@langchain/openai": "^0.4.4",
@@ -42,6 +43,7 @@
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^4.1.3",
     "radix-vue": "^1.9.11",
+    "reka-ui": "^2.1.1",
     "sudo-prompt": "^9.2.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
