--- a/WebUI/package.json
+++ b/WebUI/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ai-playground",
   "private": true,
-  "version": "2.2.0-beta",
+  "version": "2.4.0-beta.backendsettings",
   "scripts": {
     "dev": "cross-env VITE_DEBUG_TOOLS=\"true\" VITE_PLATFORM_TITLE=\"for Local® Dev™ Mode\" vite",
     "preview": "vite preview",
@@ -25,6 +25,7 @@
     "@langchain/core": "^0.3.42",
     "@langchain/openai": "^0.4.4",
     "@radix-icons/vue": "^1.0.0",
+    "@vee-validate/zod": "^4.15.0",
     "@vueuse/core": "^11.3.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -45,15 +46,16 @@
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^4.1.3",
     "radix-vue": "^1.9.11",
-    "reka-ui": "^2.1.1",
+    "reka-ui": "^2.2.0",
     "sudo-prompt": "^9.2.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "unplugin-auto-import": "^0.18.6",
     "uuid": "^11.0.5",
+    "vee-validate": "^4.15.0",
     "vue": "^3.5.12",
     "word-extractor": "^1.0.4",
-    "zod": "^3.24.1"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/exif": "^0.6.5",
