--- a/WebUI/package.json
+++ b/WebUI/package.json
@@ -41,6 +41,7 @@
     "marked": "^14.1.4",
     "marked-highlight": "^2.2.1",
     "node-fetch": "^3.3.2",
+    "ollama": "^0.5.15",
     "partysocket": "^1.1.3",
     "pdf-parse": "^1.1.1",
     "pinia": "^2.3.1",
