--- a/service/requirements-ipex-llm.txt
+++ b/service/requirements-ipex-llm.txt
@@ -1,3 +1,3 @@
---extra-index-url https://download.pytorch.org/whl
+--extra-index-url https://download.pytorch.org/whl/xpu
 
-ipex-llm==2.3.0b20250425
+ipex-llm[xpu_2.7]==2.3.0b20250426.post0
