remove build offline-package in github workflow build-installer.yml

--- a/.github/workflows/build-installer.yml
+++ b/.github/workflows/build-installer.yml
@@ -48,7 +48,6 @@ jobs:
         run: |
           npm run fetch-build-resources -- --conda_env_dir=../python_package_res/conda
           npm run prepare-build
-          npm run prepare-offline-package:win -- --conda_env_dir=../python_package_res/conda
           npm run build
 
       - name: set release path
@@ -61,9 +60,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: "installers-${{ github.sha }}"
-          path: |
-            ${{ env.RELEASE_DIR }}\*.exe
-            ${{ env.RELEASE_DIR }}\*.7z
+          path: ${{ env.RELEASE_DIR }}\*.exe
           if-no-files-found: error
           retention-days: 1
           overwrite: true
