chore: upgrade npm packages

--- a/WebUI/package.json
+++ b/WebUI/package.json
@@ -21,12 +21,14 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
-    "@langchain/community": "^0.3.41",
-    "@langchain/core": "^0.3.48",
-    "@langchain/openai": "^0.4.9",
+    "@langchain/community": "^0.3.49",
+    "@langchain/core": "^0.3.66",
+    "@langchain/openai": "^0.6.2",
     "@radix-icons/vue": "^1.0.0",
-    "@vee-validate/zod": "^4.15.0",
-    "@vueuse/core": "^11.3.0",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/vite": "^4.1.11",
+    "@vee-validate/zod": "^4.15.1",
+    "@vueuse/core": "^13.5.0",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -35,54 +37,54 @@
     "extract-zip": "^2.0.1",
     "get-port": "^7.1.0",
     "highlight.js": "^11.11.1",
-    "koffi": "^2.11.0",
-    "langchain": "^0.3.24",
-    "mammoth": "^1.9.0",
-    "marked": "^14.1.4",
-    "marked-highlight": "^2.2.1",
+    "koffi": "^2.12.2",
+    "langchain": "^0.3.30",
+    "mammoth": "^1.9.1",
+    "marked": "^16.1.1",
+    "marked-highlight": "^2.2.2",
     "node-fetch": "^3.3.2",
-    "partysocket": "^1.1.3",
+    "partysocket": "^1.1.4",
     "pdf-parse": "^1.1.1",
-    "pinia": "^2.3.1",
-    "pinia-plugin-persistedstate": "^4.2.0",
+    "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.4.1",
     "radix-vue": "^1.9.17",
-    "reka-ui": "^2.2.1",
+    "reka-ui": "^2.3.2",
     "sudo-prompt": "^9.2.1",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "unplugin-auto-import": "^0.18.6",
+    "unplugin-auto-import": "^19.3.0",
     "uuid": "^11.1.0",
-    "vee-validate": "^4.15.0",
-    "vue": "^3.5.12",
+    "vee-validate": "^4.15.1",
+    "vue": "^3.5.17",
     "word-extractor": "^1.0.4",
-    "zod": "^3.24.3"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/exif": "^0.6.5",
-    "@types/express": "^5.0.1",
+    "@types/express": "^5.0.3",
     "@types/minimist": "^1.2.5",
     "@types/node": "^20.17.30",
-    "@vitejs/plugin-vue": "^5.2.3",
-    "@vue/devtools": "^7.7.5",
+    "@vitejs/plugin-vue": "^6.0.0",
+    "@vue/devtools": "^7.7.7",
     "@vue/eslint-config-prettier": "^10.2.0",
-    "@vue/eslint-config-typescript": "^14.5.0",
+    "@vue/eslint-config-typescript": "^14.6.0",
     "adm-zip": "^0.5.16",
-    "electron": "^33.4.10",
-    "electron-builder": "^25.1.8",
-    "electron-builder-squirrel-windows": "^25.1.8",
-    "eslint": "^9.25.1",
-    "eslint-plugin-oxlint": "^0.15.15",
-    "eslint-plugin-vue": "^9.33.0",
-    "postcss": "^8.5.3",
-    "postcss-import": "^16.1.0",
-    "prettier": "^3.5.3",
-    "tailwindcss": "^3.4.17",
+    "electron": "^37.2.3",
+    "electron-builder": "^26.0.12",
+    "electron-builder-squirrel-windows": "^26.0.12",
+    "eslint": "^9.31.0",
+    "eslint-plugin-oxlint": "^1.8.0",
+    "eslint-plugin-vue": "^10.3.0",
+    "postcss": "^8.5.6",
+    "postcss-import": "^16.1.1",
+    "prettier": "^3.6.2",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
-    "vite": "^6.3.3",
-    "vite-plugin-electron": "^0.28.8",
+    "vite": "^7.0.5",
+    "vite-plugin-electron": "^0.29.0",
     "vite-plugin-electron-renderer": "^0.14.6",
-    "vitest": "^3.1.2",
-    "vue-tsc": "^2.2.10"
+    "vitest": "^3.2.4",
+    "vue-tsc": "^3.0.3"
   },
   "overrides": {
     "ip": "https://registry.npmjs.org/neoip/-/neoip-2.1.0.tgz"
