Switch llama-cpp backend to use the official llama-cpp vulkan backend release instead of llama-cpp-python (#286)
**Description:**

This PR switches from using a self-built llama-cpp-python to the
official llama-cpp vulkan backend release. This should increase
performance during inference and improve the maintainability of AI
Playground.

The PR also adds the ipex-llm ollama backend as a proof-of-concept
behind a feature flag.

**Changes Made:**

* switch llama-cpp from self-built llama-cpp-python to official
llama-cpp server with vulkan backend
* add deepseek gguf model
* add ollama PoC (behind feature flag)

**Testing Done:**

Tested locally on B580

**Screenshots:**


![image](https://github.com/user-attachments/assets/0ef8cebe-09a9-437d-81ae-44acb0bded1e)

**Checklist:**

- [x] I have tested the changes locally.
- [x] I have self-reviewed the code changes.

---------

Signed-off-by: Markus Schuettler
Co-authored-by: Li-AI-ABN <qiacheng.li@intel.com>

--- a/WebUI/package.json
+++ b/WebUI/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ai-playground",
   "private": true,
-  "version": "2.5.5-beta",
+  "version": "2.6.0-beta",
   "scripts": {
     "dev": "cross-env VITE_DEBUG_TOOLS=\"true\" VITE_PLATFORM_TITLE=\"for Local® Dev™ Mode\" vite",
     "preview": "vite preview",
@@ -20,6 +20,8 @@
     "format:ci": "prettier --check ."
   },
   "dependencies": {
+    "@ai-sdk/openai-compatible": "^0.2.13",
+    "@ai-sdk/vue": "^1.2.8",
     "@heroicons/vue": "^2.2.0",
     "@langchain/community": "^0.3.41",
     "@langchain/core": "^0.3.48",
@@ -27,6 +29,7 @@
     "@radix-icons/vue": "^1.0.0",
     "@vee-validate/zod": "^4.15.0",
     "@vueuse/core": "^11.3.0",
+    "ai": "^4.3.10",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
