--- a/WebUI/package.json
+++ b/WebUI/package.json
@@ -45,6 +45,7 @@
     "marked": "^16.1.1",
     "marked-highlight": "^2.2.2",
     "node-fetch": "^3.3.2",
+    "ollama": "^0.5.16",
     "partysocket": "^1.1.4",
     "pdf-parse": "^1.1.1",
     "pinia": "^3.0.3",
