--- a/WebUI/package.json
+++ b/WebUI/package.json
@@ -29,7 +29,7 @@
     "@radix-icons/vue": "^1.0.0",
     "@tailwindcss/vite": "^4.1.11",
     "@vee-validate/zod": "^4.15.1",
-    "@vueuse/core": "^13.5.0",
+    "@vueuse/core": "^13.6.0",
     "ai": "^4.3.19",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
@@ -51,10 +51,9 @@
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.4.1",
     "radix-vue": "^1.9.17",
-    "reka-ui": "^2.3.2",
+    "reka-ui": "^2.4.1",
     "sudo-prompt": "^9.2.1",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7",
     "unplugin-auto-import": "^19.3.0",
     "uuid": "^11.1.0",
     "vee-validate": "^4.15.1",
@@ -80,6 +79,7 @@
     "eslint-plugin-vue": "^10.3.0",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.11",
+    "tw-animate-css": "^1.3.6",
     "typescript": "^5.8.3",
     "vite": "^7.0.5",
     "vite-plugin-electron": "^0.29.0",
