--- a/WebUI/package.json
+++ b/WebUI/package.json
@@ -5,12 +5,11 @@
   "scripts": {
     "dev": "cross-env VITE_DEBUG_TOOLS=\"true\" VITE_PLATFORM_TITLE=\"for Local® Dev™ Mode\" vite",
     "preview": "vite preview",
-    "fetch-build-resources": "cross-env node ./build/scripts/fetch-python-package-resources.js --target_dir=../build_resources",
-    "prepare-python-env": "cross-env node ./build/scripts/prepare-python-env.js --build_resources_dir=../build_resources --target_dir=../build-envs/online/prototype-python-env",
-    "install-full-python-env": "cross-env node ./build/scripts/install-full-python-env.js --env_dir=../build-envs/online/prototype-python-env --comfy_ui_dir=../build_resources/ComfyUI",
-    "provide-electron-build-resources": "cross-env node build/scripts/provide-electron-build-resources.js --build_resources_dir=../build_resources --backend_dir=../service --llamacpp_dir=../LlamaCPP --openvino_dir=../OpenVINO --device_service_dir=../device-service --shared_dir=../backend-shared --target_dir=./external",
-    "prepare-build": "cross-env npm run prepare-python-env && npm run provide-electron-build-resources -- --python_env_dir=../build-envs/online/prototype-python-env",
-    "build": "node ./build/scripts/patch-nsis-template.js && cross-env-shell VITE_PLATFORM_TITLE=\"for Intel® Arc™\" \"vue-tsc && vite build && electron-builder --config build/build-config.json --win --x64\"",
+    "fetch-build-resources": "node --experimental-strip-types ./build/scripts/fetch-python-package-resources.mts",
+    "prepare-python-env": "node --experimental-strip-types ./build/scripts/prepare-python-env.mts",
+    "patch-nsis-files": "node --experimental-strip-types ./build/scripts/patch-nsis-template.mts",
+    "prepare-build": "npm run fetch-build-resources && npm run prepare-python-env",
+    "build": "npm run patch-nsis-files && cross-env-shell VITE_PLATFORM_TITLE=\"for Intel® Arc™\" \"vue-tsc && vite build && electron-builder --config build/build-config.json --win --x64 --publish never\"",
     "test": "vitest run",
     "test:watch": "vitest",
     "lint:eslint": "eslint . --fix",
@@ -62,6 +61,7 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@types/adm-zip": "^0.5.7",
     "@types/exif": "^0.6.5",
     "@types/express": "^5.0.3",
     "@types/minimist": "^1.2.5",
