--- a/service/requirements-xpu.txt
+++ b/service/requirements-xpu.txt
@@ -1,4 +1,4 @@
---extra-index-url https://download.pytorch.org/whl/test/xpu
+--extra-index-url https://download.pytorch.org/whl/xpu
 torch==2.8.0+xpu
 torchvision
 torchaudio
