fix: improve answer parsing

--- a/WebUI/package.json
+++ b/WebUI/package.json
@@ -37,12 +37,11 @@
     "express": "^4.21.2",
     "extract-zip": "^2.0.1",
     "get-port": "^7.1.0",
-    "highlight.js": "^11.11.1",
     "koffi": "^2.12.2",
     "langchain": "^0.3.30",
     "mammoth": "^1.9.1",
     "marked": "^16.1.1",
-    "marked-highlight": "^2.2.2",
+    "marked-shiki": "^1.2.1",
     "node-fetch": "^3.3.2",
     "ollama": "^0.5.16",
     "partysocket": "^1.1.4",
@@ -51,6 +50,8 @@
     "pinia-plugin-persistedstate": "^4.4.1",
     "radix-vue": "^1.9.17",
     "reka-ui": "^2.4.1",
+    "remove": "^0.1.5",
+    "shiki": "^3.9.2",
     "sudo-prompt": "^9.2.1",
     "tailwind-merge": "^3.3.1",
     "unplugin-auto-import": "^19.3.0",
