--- a/WebUI/package.json
+++ b/WebUI/package.json
@@ -54,6 +54,7 @@
     "shiki": "^3.9.2",
     "sudo-prompt": "^9.2.1",
     "tailwind-merge": "^3.3.1",
+    "uint8array-extras": "^1.4.1",
     "unplugin-auto-import": "^19.3.0",
     "uuid": "^11.1.0",
     "vee-validate": "^4.15.1",
