Fixes and adjustments 2.6.0 beta (#316)
**Description:**

This PR adds various features, fixes, and improvement that were
implemented in preparation of the 2.6.0-beta release.

**Changes Made:**

##### Create
  * allow to drag and drop images from create tab into workflow settings
  * adjust default image generation counts for default modes
  * add quick select for default mode image quality and resolution
  * switch image output folder naming scheme to YYYYmmdd
* adjust various parts of the default mode image generation to adapt to
new dependency versions
  * ComfyUI
    * add link to open comfyui in browser
    * categorize comfyui workflows in workflow drop-down menu
    * bump version to latest
    * add Wan2.1 workflows
    * add drag and drop for generated images
    * add all-in-one flux kontext workflow
* add Acer Vision Art workflow for devices where Acer Vision Art is
installed
* fix issue where comfyui workflows were not refreshed after being
updated on disk
* change comfyui workflow update behavior to load workflows from a
release specific branch
##### Enhance
* automatically set aspect ratio in Enhance based on loaded image, when
image is loaded or mode is switched
##### Answer
  * remove ipex-llm backend
  * upgrade openvino
  * add additional openvino npu models
  * add additional llama-cpp gguf models
  * add context size input for llama-cpp backend
  * add loading overlay for backend reloads
  * improve markdown parsing and code block copy functionality
* make code block header sticky to allow easier copying of long code
blocks
* support pulling ollama models directly from AI Playground
(experimental feature -> settings.json `enablePreviewFeatures: true` )
##### Other
* adjust model download temporary folder naming to avoid issues with
running into windows max path length
* add demo mode and allow to select starting tab via command line
argument (@HardikLalcheta)
  * make selected theme persistent across restarts
  * add version settings for all bac

--- a/WebUI/package.json
+++ b/WebUI/package.json
@@ -5,12 +5,11 @@
   "scripts": {
     "dev": "cross-env VITE_DEBUG_TOOLS=\"true\" VITE_PLATFORM_TITLE=\"for Local® Dev™ Mode\" vite",
     "preview": "vite preview",
-    "fetch-build-resources": "cross-env node ./build/scripts/fetch-python-package-resources.js --target_dir=../build_resources",
-    "prepare-python-env": "cross-env node ./build/scripts/prepare-python-env.js --build_resources_dir=../build_resources --target_dir=../build-envs/online/prototype-python-env",
-    "install-full-python-env": "cross-env node ./build/scripts/install-full-python-env.js --env_dir=../build-envs/online/prototype-python-env --comfy_ui_dir=../build_resources/ComfyUI",
-    "provide-electron-build-resources": "cross-env node build/scripts/provide-electron-build-resources.js --build_resources_dir=../build_resources --backend_dir=../service --llamacpp_dir=../LlamaCPP --openvino_dir=../OpenVINO --device_service_dir=../device-service --shared_dir=../backend-shared --target_dir=./external",
-    "prepare-build": "cross-env npm run prepare-python-env && npm run provide-electron-build-resources -- --python_env_dir=../build-envs/online/prototype-python-env",
-    "build": "node ./build/scripts/patch-nsis-template.js && cross-env-shell VITE_PLATFORM_TITLE=\"for Intel® Arc™\" \"vue-tsc && vite build && electron-builder --config build/build-config.json --win --x64\"",
+    "fetch-build-resources": "node --experimental-strip-types ./build/scripts/fetch-python-package-resources.mts",
+    "prepare-python-env": "node --experimental-strip-types ./build/scripts/prepare-python-env.mts",
+    "patch-nsis-files": "node --experimental-strip-types ./build/scripts/patch-nsis-template.mts",
+    "prepare-build": "npm run fetch-build-resources && npm run prepare-python-env",
+    "build": "npm run patch-nsis-files && cross-env-shell VITE_PLATFORM_TITLE=\"for Intel® Arc™\" \"vue-tsc && vite build && electron-builder --config build/build-config.json --win --x64 --publish never\"",
     "test": "vitest run",
     "test:watch": "vitest",
     "lint:eslint": "eslint . --fix",
@@ -29,7 +28,7 @@
     "@radix-icons/vue": "^1.0.0",
     "@tailwindcss/vite": "^4.1.11",
     "@vee-validate/zod": "^4.15.1",
-    "@vueuse/core": "^13.5.0",
+    "@vueuse/core": "^13.6.0",
     "ai": "^4.3.19",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
@@ -38,12 +37,11 @@
     "express": "^4.21.2",
     "extract-zip": "^2.0.1",
     "get-port": "^7.1.0",
-    "highlight.js": "^11.11.1",
     "koffi": "^2.12.2",
     "langchain": "^0.3.30",
     "mammoth": "^1.9.1",
     "marked": "^16.1.1",
-    "marked-highlight": "^2.2.2",
+    "marked-shiki": "^1.2.1",
     "node-fetch": "^3.3.2",
     "ollama": "^0.5.16",
     "partysocket": "^1.1.4",
@@ -51,10 +49,12 @@
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.4.1",
     "radix-vue": "^1.9.17",
-    "reka-ui": "^2.3.2",
+    "reka-ui": "^2.4.1",
+    "remove": "^0.1.5",
+    "shiki": "^3.9.2",
     "sudo-prompt": "^9.2.1",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7",
+    "uint8array-extras": "^1.4.1",
     "unplugin-auto-import": "^19.3.0",
     "uuid": "^11.1.0",
     "vee-validate": "^4.15.1",
@@ -63,6 +63,7 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@types/adm-zip": "^0.5.7",
     "@types/exif": "^0.6.5",
     "@types/express": "^5.0.3",
     "@types/minimist": "^1.2.5",
@@ -80,6 +81,7 @@
     "eslint-plugin-vue": "^10.3.0",
     "prettier": "^3.6.2",
     "tailwindcss": "^4.1.11",
+    "tw-animate-css": "^1.3.6",
     "typescript": "^5.8.3",
     "vite": "^7.0.5",
     "vite-plugin-electron": "^0.29.0",
