chore: upgrade dependencies, replace basicsr

--- a/service/requirements.txt
+++ b/service/requirements.txt
@@ -1,17 +1,17 @@
-basicsr==1.4.2
+spandrel==0.4.1
 compel==2.1.1
 datasets==4.0.0
-diffusers==0.34.0
-Flask==3.1.1
+diffusers==0.35.1
+Flask==3.1.2
 apiflask==2.4.0
 marshmallow-dataclass==8.7.1
 numpy==2.3.2
 opencv-python-headless==4.11.0.86
-peft==0.16.0
+peft==0.17.1
 Pillow==11.3.0
 psutil==7.0.0
-Requests==2.32.4
-transformers==4.54.1
+Requests==2.32.5
+transformers==4.56.0
 setuptools>=80.9.0
-huggingface_hub==0.34.3
-accelerate==1.9.0
+huggingface_hub==0.34.4
+accelerate==1.10.1
