wip: remove obsolete files

--- a/.gitignore
+++ b/.gitignore
@@ -18,14 +18,10 @@ ComfyUI/
 ollama-service/
 env
 llama-cpp-env/
-llama-cpp/
-llama-cpp.zip
+LlamaCPP/
+OpenVINO/
 *env_tmp/
 *service_tmp/
 *-env/
 build-envs/
 portable-git/
-llm_cache*/
-emb_model_cache/
-ovms/
-ovms.zip
