--- a/comfyui-deps/pyproject.toml
+++ b/comfyui-deps/pyproject.toml
@@ -3,42 +3,79 @@ name = "aipg-comfyui"
 version = "0.3.66"
 requires-python = "==3.12.*"
 dependencies = [
+  "addict", 
+  "aiohttp>=3.11.8",
+  "albumentations", 
+  "alembic",
+  "av>=14.2.0",
+  "color-matcher",
+  "comfyui-embedded-docs==0.3.0",
   "comfyui-frontend-package==1.28.7",
   "comfyui-workflow-templates==0.2.1",
-  "comfyui-embedded-docs==0.3.0",
+  "diffusers>=0.35.2",
+  "einops",
+  "filelock", 
+  "filelock>=3.20.0",
+  "ftfy", 
+  "fvcore", 
+  "gguf>=0.13.0",
+  "huggingface_hub",
+  "imageio-ffmpeg",
+  "importlib_metadata",
+  "insightface==0.7.3",
+  "kornia>=0.7.1",
+  "librosa",
+  "matplotlib",
+  "mediapipe",
+  "mss>=10.1.0",
+  "ninja~=1.11.1.4",
+  "numpy>=1.25.0",
+  "omegaconf", 
+  "onnx>=1.14.0",
+  "onnxruntime",
+  "opencv-python>=4.7.0.72",
+  "Pillow>=10.3.0", 
+  "protobuf",
+  "psutil",
+  "pydantic-settings~=2.0",
+  "pydantic~=2.0",
+  "python-dateutil", 
+  "pytorch-triton-xpu>=3.5.0; sys_platform == 'win32'",
+  "pyyaml",
+  "safetensors>=0.4.2",
+  "scikit-image", 
+  "scikit-learn", 
+  "scipy",
+  "segment-anything>=1.0",
+  "sentencepiece",
+  "spandrel",
+  "SQLAlchemy",
+  "stringzilla==3.12.6",
+  "svglib", 
+  "timm>=0.9.2",
+  "tokenizers>=0.13.3",
   "torch>=2.9.0",
+  "torchaudio>=2.9.0",
   "torchsde",
   "torchvision>=0.24.0",
-  "torchaudio>=2.9.0",
-  "pytorch-triton-xpu>=3.5.0; sys_platform == 'win32'",
-  "numpy>=1.25.0",
-  "einops",
-  "transformers>=4.37.2",
-  "tokenizers>=0.13.3",
-  "sentencepiece",
-  "safetensors>=0.4.2",
-  "aiohttp>=3.11.8",
-  "yarl>=1.18.0",
-  "pyyaml",
-  "Pillow",
-  "scipy",
   "tqdm",
-  "psutil",
-  "alembic",
-  "SQLAlchemy",
-  "av>=14.2.0",
-  "kornia>=0.7.1",
-  "spandrel",
-  "pydantic~=2.0",
-  "pydantic-settings~=2.0",
+  "transformers[timm]>=4.45.0",
+  "trimesh[easy]", 
+  "ultralytics>=8.3.233",
+  "yacs", 
+  "yapf", 
+  "yarl>=1.18.0",
 ]
 
 [tool.uv]
 python-preference = "only-managed"
 link-mode = "clone"
-no-build = true
 index-strategy = "unsafe-best-match"
 required-environments = [
+  "sys_platform == 'win32'",
+  "sys_platform == 'darwin'",
+]
+environments = [
   "sys_platform == 'win32'",
   "sys_platform == 'darwin'",
 ]
@@ -52,6 +89,13 @@ torchvision = [{ index = "pytorch-xpu", marker = "sys_platform == 'win32'" },
                { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" }]
 pytorch-triton-xpu = [
   { index = "pytorch-xpu", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
+]
+insightface = [
+  { url = "https://github.com/TNG/AI-Playground/releases/download/insightface-0.7.3/insightface-0.7.3-cp312-cp312-macosx_11_0_arm64.whl", marker = "sys_platform == 'darwin'" },
+  { url = "https://github.com/Gourieff/Assets/raw/main/Insightface/insightface-0.7.3-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32'" },
+]
+mediapipe = [
+  { url = "https://github.com/TNG/AI-Playground/releases/download/mediapipe-0.10.14/mediapipe-0.10.14-cp312-cp312-macosx_11_0_universal2.whl", marker = "sys_platform == 'darwin'" },
 ]
 
 [[tool.uv.index]]
