wip: comfyui manger, remove image preview, context tooltip

--- a/comfyui-deps/pyproject.toml
+++ b/comfyui-deps/pyproject.toml
@@ -8,40 +8,44 @@ dependencies = [
   "albumentations", 
   "alembic",
   "av>=14.2.0",
+  "chardet",
   "color-matcher",
   "comfyui-embedded-docs==0.3.0",
   "comfyui-frontend-package==1.28.7",
   "comfyui-workflow-templates==0.2.1",
   "diffusers>=0.35.2",
   "einops",
-  "filelock", 
-  "filelock>=3.20.0",
-  "ftfy", 
-  "fvcore", 
+  "filelock",
+  "ftfy",
+  "fvcore",
   "gguf>=0.13.0",
-  "huggingface_hub",
+  "GitPython",
+  "huggingface-hub>0.20",
   "imageio-ffmpeg",
   "importlib_metadata",
   "insightface==0.7.3",
   "kornia>=0.7.1",
   "librosa",
   "matplotlib",
+  "matrix-nio",
   "mediapipe",
   "mss>=10.1.0",
   "ninja~=1.11.1.4",
   "numpy>=1.25.0",
-  "omegaconf", 
+  "omegaconf",
   "onnx>=1.14.0",
   "onnxruntime",
   "opencv-python>=4.7.0.72",
-  "Pillow>=10.3.0", 
+  "Pillow>=10.3.0",
   "protobuf",
   "psutil",
   "pydantic-settings~=2.0",
   "pydantic~=2.0",
+  "PyGithub",
   "python-dateutil", 
   "pytorch-triton-xpu>=3.5.0; sys_platform == 'win32'",
   "pyyaml",
+  "rich",
   "safetensors>=0.4.2",
   "scikit-image", 
   "scikit-learn", 
@@ -54,6 +58,7 @@ dependencies = [
   "svglib", 
   "timm>=0.9.2",
   "tokenizers>=0.13.3",
+  "toml",
   "torch>=2.9.0",
   "torchaudio>=2.9.0",
   "torchsde",
@@ -61,7 +66,10 @@ dependencies = [
   "tqdm",
   "transformers[timm]>=4.45.0",
   "trimesh[easy]", 
+  "typer",
+  "typing-extensions",
   "ultralytics>=8.3.233",
+  "uv",
   "yacs", 
   "yapf", 
   "yarl>=1.18.0",
@@ -79,6 +87,9 @@ environments = [
   "sys_platform == 'win32'",
   "sys_platform == 'darwin'",
 ]
+
+[tool.uv.pip]
+torch-backend = "xpu"
 
 [tool.uv.sources]
 torch = [{ index = "pytorch-xpu", marker = "sys_platform == 'win32'" },
